src/static/css/main.css
/* ... */
/*
* Form
*/
label {
  text-transform: uppercase;
}

.btn-primary,
.btn-secondary {
  padding: 11px 20px;
  border-radius: 0px;
}

select,
input {
  border-radius: 0px !important;
}

.btn-secondary {
  margin-right: -10px;
}

label.btn-secondary > input {
  display: none;
}

.btn-primary {
  background-color: white !important;
  color: black !important;
  text-transform: uppercase;
}

.vertical-buttons {
  margin-bottom: 30px;
}

@media only screen and (max-width: 767px) {
  .vertical-buttons > div > .description {
    margin-bottom: 15px;
  }
}

@media only screen and (min-width: 768px) {
  .vertical-buttons > div > .description {
    padding-top: 15px;
  }
}

.vertical-buttons > div > div > label {
  min-width: 140px;
}

@media only screen and (max-width: 450px) {
  label {
    width: inherit;
  }
}

.full-width {
  width: 100%;
}

.medium {
  font-size: 25px;
}

.form-group .row {
  padding-bottom: 0.75rem;
  border-radius: 0px;
}

/*
* Result event evaluation
*/
.recommendation {
  margin-left: 10px;
  margin-right: 10px;
  padding: 5px 18px;
  color: black;
  font-weight: bold;
}

.cancel .recommendation {
  background-color: #c51300;
}
.cancel .number {
  color: #ff2710;
}

.uncertain .recommendation {
  background-color: #fcb100;
}
.uncertain .number {
  color: #fcb100;
}

.goahead .recommendation {
  background-color: #90e10b;
}
.goahead .number,
.green {
  color: #90e10b;
}

.detail-button {
  background-color: transparent;
  border-width: 0px;
  min-width: 132px;
  margin-bottom: 12px;
  padding: 0;
  text-align: right
}

.less-visible7 {
  color: white;
  mix-blend-mode: normal;
  opacity: 0.7;
}

.less-visible8 {
  color: white;
  mix-blend-mode: normal;
  opacity: 0.8;
}

.credits {
  font-size: 13px;
  margin-top: -10px;
}

.fa-caret-down,
.fa-caret-up {
  margin-left: 4px;
}

/*
* Model
*/

.population > label {
  padding-left: 0px !important;
}
.population > div {
  margin-top: -6px;
  margin-left: 0px;
}

strong {
  color: white;
}

.containment_measure {
  padding-top: 10px;
}

.mitigation-strength {
  margin-left: auto;
  display: flex;
}

.mitigation-strength > div > .btn-secondary {
  min-width: 76px;
}

.alert-warning > p {
  margin-bottom: 0px;
}

@media only screen and (max-width: 991px) {
  .title {
    text-align: center;
  }
  .population > label {
    margin-top: 20px;
    margin-right: 0px;
  }
  .mitigation-strength {
    margin-top: 8px;
  }
}

@media only screen and (min-width: 992px) {
  .title {
    text-align: left;
  }
  .population {
    margin-left: -52px;
  }
  .population > label {
    margin-top: 2px;
    margin-right: 20px;
  }
}

@media only screen and (min-width: 576px) {
  .large {
    font-size: 35px;
  }
}

@media only screen and (max-width: 575px) {
  .large {
    font-size: 25px;
  }
  .navbar ul li {
    display: block;
  }
  .navbar ul {
    padding: 0;
  }

  .nav-masthead .nav-link {
    border-bottom: 0.1rem solid transparent;
  }
  .nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
  }
  .nav-masthead .nav-link {
    padding-left: 0px;
  }
  .container-wrapper {
    display: block;
  }
  .container-left {
    flex: none;
    width: 100%;
  }
  .container-right {
    flex: none;
    width: 100%;
  }
  .container-right-footer {
    position: static;
  }
  .main-wrapper {
    padding: 15px 15px;
  }
  .detail-button {
    text-align: left
  }
  .alert-warning > p {
    margin-bottom: 0px;
    font-size: 0.75rem
  }
}

.fill-available-width {
  width: 100%;
}

textarea {
  height: 200px;
}

.color1 {
  color: #edcdab;
}
.color2 {
  color: #edb77e;
}
.color3 {
  color: #e97f0f;
}
.color4 {
  color: #9ac9d9;
}
.color5 {
  color: #5abbdb;
}
.color6 {
  color: #007ca6;
}

.legend {
  opacity: 1 !important;
  user-select: auto;
  width: 100% !important;
  background-color: transparent;
  background: transparent !important;
  font: 12px sans-serif;
  text-align: center;
}

div.tooltip {
  position: absolute;
  text-align: center;
  width: 70px !important;
  height: auto;
  padding: 2px;
  font: 12px sans-serif;
  color: #fff;
  background: #050547;
  border: 1px solid #212121;
  border-radius: 8px;
  pointer-events: none;
  background-color: #342e47 !important;
  margin-left: 16px;
  margin-top: -8px;
}

.overlay {
  fill: none;
  stroke: none;
  pointer-events: all;
}

.line .crosshair {
  fill: none;
  stroke-width: 1px;
}

.line .crosshair {
  stroke: white;
  opacity: 0.2;
}

/*
* General
*/
.underlined {
  text-decoration: underline;
}

table th, table td {
  padding: 0.1em 0.7em;
}

#regionList{
  height: auto;
  overflow-y: scroll;
  text-transform: uppercase;
}

#consultingAlert .close:hover{
  color: white;
}

