reintegrate css sizing to fix chart on small screens

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -831,6 +831,23 @@ div.tooltip {
   opacity: 0.2;
 }
 
+#my_dataviz {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.js-plotly-plot .plotly .svg-container {
+  position: relative;
+}
+
+.js-plotly-plot .plotly .main-svg:first-child {
+  position: relative;
+}
+
+
 /*
 * General
 */
